--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Nike88 : Link Resmi PGSoft & Pragmatic Minimal 200 Perak</title>
     <meta name="description" content="Nike88 ialah link situs resmi dari platform pgsoft dan pragmatic yang kini telah memberikan minimal permainan sebesar 200 perak dengan metode transfer melalui bank, e-wallet, dana, dan juga QRIS dalam hitungan detik." />
     <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh5bnKAXJ6spPK3i_vLyujYYppJH3NhHiciIMBYV02IzQMpx0_X-Q6-qoK_Mp-0gbD0MNaSpSKSrNE_kWMR8deI0s45239Jta2_iGHFwkQXUf5PoRzWG_jH0ViKU7Ln3j3dW2YqkEu9FpQQ2xxiTmgBpC39CzHUI0o-u4SLxiIT191vAhoDazKelUdpBxfA/s320/site_logo_favicon-1687935169.png" rel="icon" type="image/x-icon" />
-    <link rel="canonical" href="https://nike88palembang.com/" />
-    <link rel="alternate" href="https://nike88palembang.com/" hreflang="id" />
+    <link rel="canonical" href="https://nike88aceh.com/" />
+    <link rel="alternate" href="https://nike88aceh.com/" hreflang="id" />
     <meta property="og:url" content="https://nike88palembang.com/" />
     <meta property="og:site_name" content="Nike88" />
     <meta property="og:image:alt" content="Nike88 : Link Resmi PGSoft & Pragmatic Minimal 200 Perak" />
