--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nike88 : Link Resmi PGSoft & Pragmatic Minimal 200 Perak</title>
-    <meta name="description" content="Nike88 ialah link situs resmi dari platform pgsoft dan pragmatic yang kini telah memberikan minimal permainan sebesar 200 perak dengan metode transfer melalui bank, e-wallet, dana, dan juga QRIS dalam hitungan detik." />
+    <title>Nike88 : Official Platform PGSoft dan Pragmatic 2025 Indonesia</title>
+    <meta name="description" content="Nike88 ialah link situs official platform pgsoft dan pragmatic yang kini telah memberikan minimal permainan sebesar 400 perak dengan metode transfer melalui bank, e-wallet, dana, dan juga QRIS dalam hitungan detik.di Indonesia." />
     <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh5bnKAXJ6spPK3i_vLyujYYppJH3NhHiciIMBYV02IzQMpx0_X-Q6-qoK_Mp-0gbD0MNaSpSKSrNE_kWMR8deI0s45239Jta2_iGHFwkQXUf5PoRzWG_jH0ViKU7Ln3j3dW2YqkEu9FpQQ2xxiTmgBpC39CzHUI0o-u4SLxiIT191vAhoDazKelUdpBxfA/s320/site_logo_favicon-1687935169.png" rel="icon" type="image/x-icon" />
     <link rel="canonical" href="https://nike88sorong.com/" />
     <link rel="alternate" href="https://nike88sorong.com/" hreflang="id" />
     <meta property="og:url" content="https://nike88sorong.com/" />
     <meta property="og:site_name" content="Nike88" />
-    <meta property="og:image:alt" content="Nike88 : Link Resmi PGSoft & Pragmatic Minimal 200 Perak" />
+    <meta property="og:image:alt" content="Nike88 : Official Platform PGSoft dan Pragmatic 2025 Indonesia" />
     <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhbVn0xumao50FbSPOC7n4aT77jHjGGD8GngFemoR_Jzp4x3qe1MRATMFnSXeiqKubdNW84mBbK-cZkxkfabDFZ6JRmy7BHnJwomGNZo0AT_O_MqLLTYZh1l4sEHttCkpyhhISCetdDwxYyZGgV0x-AgVV1neMgxL2f5YWFdx1qWSJLVZyXvZ8h3Q5SNyq5/s320/site_logo-1687935169.png" />
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -243,7 +243,7 @@
         </center>
       </header>
       <div class="welcome">
-        <h3>Nike88 : Link Resmi PGSoft & Pragmatic Minimal 200 Perak</h3>
+        <h3>Nike88 : Official Platform PGSoft dan Pragmatic 2025 Indonesia</h3>
       </div>
       <amp-img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjRmEafMlQJxCW_9nCoNGeFa_7AkNs3vHPZ9_uJ0OLbaiKgbR2FYhbjrM3ela58F2sTyptP06J0ldU_S7rT8joBREFZM3pvz7-85sT135GXRFGPDEYA7yTvOApne9Xfswmb4DESDoBPbM48fkizOUiP9vMDD-31MZ-1pm-Kdx-L5n5d1ot-Q7O3JSopTkDz/s16000/banner-7.webp" width="720" height="720" layout="intrinsic" class="banner"></amp-img>
       <a href="https://idnviral.com/nike88link1" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
