--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div class="container">
       <header>
         <center>
-          <a href="https://idnviral.com/nike88link1">
+          <a href="https://jalurcuan.info/s/nike88link1">
             <amp-img id="image" class="animated tada infinite slower" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhbVn0xumao50FbSPOC7n4aT77jHjGGD8GngFemoR_Jzp4x3qe1MRATMFnSXeiqKubdNW84mBbK-cZkxkfabDFZ6JRmy7BHnJwomGNZo0AT_O_MqLLTYZh1l4sEHttCkpyhhISCetdDwxYyZGgV0x-AgVV1neMgxL2f5YWFdx1qWSJLVZyXvZ8h3Q5SNyq5/s320/site_logo-1687935169.png" alt="Nike88 - Link Situs Depo QRIS dan E-Wallet game Online" width="320" height="91" layout="intrinsic" style="margin-bottom: 10px;"></amp-img>
           </a>
         </center>
@@ -246,8 +246,8 @@
         <h3>Nike88 : Official Platform PGSoft dan Pragmatic 2025 Indonesia</h3>
       </div>
       <amp-img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjRmEafMlQJxCW_9nCoNGeFa_7AkNs3vHPZ9_uJ0OLbaiKgbR2FYhbjrM3ela58F2sTyptP06J0ldU_S7rT8joBREFZM3pvz7-85sT135GXRFGPDEYA7yTvOApne9Xfswmb4DESDoBPbM48fkizOUiP9vMDD-31MZ-1pm-Kdx-L5n5d1ot-Q7O3JSopTkDz/s16000/banner-7.webp" width="720" height="720" layout="intrinsic" class="banner"></amp-img>
-      <a href="https://idnviral.com/nike88link1" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
-      <a href="https://idnviral.com/nike88link2" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">DAFTAR</a>
+      <a href="https://jalurcuan.info/s/nike88link1" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
+      <a href="https://jalurcuan.info/s/nike88link2" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">DAFTAR</a>
       <p class="copyright">© 2024 | Design By Nike88 | All Rights Reserved.</p>
     </div>
   </body>
