--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         color: #fff;
         border-right: 0.15em solid #fbf4a0;
         letter-spacing: 0.09em;
+        text-align: center;
       }
 
       @keyframes typing {
