--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
         <h3>Nike88 : Official Platform PGSoft dan Pragmatic 2025 Indonesia</h3>
       </div>
       <amp-img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjRmEafMlQJxCW_9nCoNGeFa_7AkNs3vHPZ9_uJ0OLbaiKgbR2FYhbjrM3ela58F2sTyptP06J0ldU_S7rT8joBREFZM3pvz7-85sT135GXRFGPDEYA7yTvOApne9Xfswmb4DESDoBPbM48fkizOUiP9vMDD-31MZ-1pm-Kdx-L5n5d1ot-Q7O3JSopTkDz/s16000/banner-7.webp" width="720" height="720" layout="intrinsic" class="banner"></amp-img>
-      <a href="https://jalurcuan.info/s/nike88link1" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
-      <a href="https://jalurcuan.info/s/nike88link2" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">DAFTAR</a>
+      <a href="https://nk88sambas.xyz" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
+      <a href="https://nk88sambas.xyz/register?ref=daftartop" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">DAFTAR</a>
       <p class="copyright">© 2024 | Design By Nike88 | All Rights Reserved.</p>
     </div>
   </body>
