--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nike88 - Situs Official Platform Resmi Gaming Online 2025</title>
-    <meta name="description" content="Nike88 adalah situs official platform resmi gaming online dari berbagai macam provider terpercaya seperti PGSOft, Pragmatic, Habanero, dan juga permainan sportsbook lain minimal depo 10k." />
+    <title>Nike88: Mesin Slot Jackpot + Sabung Ayam Juara!</title>
+    <meta name="description" content="Slot jackpot PG Soft & Pragmatic RTP 98%, buy spin mudah. Sabung ayam live Filipina HD,. Deposit QRIS 10K, WD cepat, banyak bonus dan event menarik hadiah sampai dengan 5 jt." />
     <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh5bnKAXJ6spPK3i_vLyujYYppJH3NhHiciIMBYV02IzQMpx0_X-Q6-qoK_Mp-0gbD0MNaSpSKSrNE_kWMR8deI0s45239Jta2_iGHFwkQXUf5PoRzWG_jH0ViKU7Ln3j3dW2YqkEu9FpQQ2xxiTmgBpC39CzHUI0o-u4SLxiIT191vAhoDazKelUdpBxfA/s320/site_logo_favicon-1687935169.png" rel="icon" type="image/x-icon" />
-    <link rel="canonical" href="https://boilertime.co.uk/service/" />
-    <link rel="alternate" href="https://boilertime.co.uk/service/" hreflang="id" />
-    <meta property="og:url" content="https://boilertime.co.uk/service/" />
+    <link rel="canonical" href="https://nike88blitar.com" />
+    <link rel="alternate" href="https://nike88blitar.com" hreflang="id" />
+    <meta property="og:url" content="https://nike88blitar.com" />
     <meta property="og:site_name" content="Nike88" />
     <meta property="og:image:alt" content="Nike88 - Situs Official Platform Resmi Gaming Online 2025" />
     <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhbVn0xumao50FbSPOC7n4aT77jHjGGD8GngFemoR_Jzp4x3qe1MRATMFnSXeiqKubdNW84mBbK-cZkxkfabDFZ6JRmy7BHnJwomGNZo0AT_O_MqLLTYZh1l4sEHttCkpyhhISCetdDwxYyZGgV0x-AgVV1neMgxL2f5YWFdx1qWSJLVZyXvZ8h3Q5SNyq5/s320/site_logo-1687935169.png" />
