--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Nike88 : Login Resmi Akses Cepat ke Dunia Slot dan Casino Seru!</title>
     <meta name="description" content="Nikmati pengalaman bermain terbaik di Nike88, situs resmi dengan akses cepat ke game slot dan casino seru. Login sekarang dan raih jackpot besar setiap hari!" />
     <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh5bnKAXJ6spPK3i_vLyujYYppJH3NhHiciIMBYV02IzQMpx0_X-Q6-qoK_Mp-0gbD0MNaSpSKSrNE_kWMR8deI0s45239Jta2_iGHFwkQXUf5PoRzWG_jH0ViKU7Ln3j3dW2YqkEu9FpQQ2xxiTmgBpC39CzHUI0o-u4SLxiIT191vAhoDazKelUdpBxfA/s320/site_logo_favicon-1687935169.png" rel="icon" type="image/x-icon" />
-    <link rel="canonical" href="https://nike88blitar.com" />
-    <link rel="alternate" href="https://nike88blitar.com" hreflang="id" />
-    <meta property="og:url" content="https://nike88blitar.com" />
+    <link rel="canonical" href="https://nike88kendari.com" />
+    <link rel="alternate" href="https://nike88kendari.com" hreflang="id" />
+    <meta property="og:url" content="https://nike88kendari.com" />
     <meta property="og:site_name" content="Nike88" />
     <meta property="og:image:alt" content="Nike88 : Login Resmi Akses Cepat ke Dunia Slot dan Casino Seru!" />
-    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhbVn0xumao50FbSPOC7n4aT77jHjGGD8GngFemoR_Jzp4x3qe1MRATMFnSXeiqKubdNW84mBbK-cZkxkfabDFZ6JRmy7BHnJwomGNZo0AT_O_MqLLTYZh1l4sEHttCkpyhhISCetdDwxYyZGgV0x-AgVV1neMgxL2f5YWFdx1qWSJLVZyXvZ8h3Q5SNyq5/s320/site_logo-1687935169.png" />
+    <meta property="og:image" content="https://ik.imagekit.io/nike88/nike88-pecah-selayar.jpg" />
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <style amp-boilerplate>
@@ -243,7 +243,7 @@
       <div class="welcome">
         <h3>Nike88 : Login Resmi Akses Cepat ke Dunia Slot dan Casino Seru!</h3>
       </div>
-      <amp-img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjRmEafMlQJxCW_9nCoNGeFa_7AkNs3vHPZ9_uJ0OLbaiKgbR2FYhbjrM3ela58F2sTyptP06J0ldU_S7rT8joBREFZM3pvz7-85sT135GXRFGPDEYA7yTvOApne9Xfswmb4DESDoBPbM48fkizOUiP9vMDD-31MZ-1pm-Kdx-L5n5d1ot-Q7O3JSopTkDz/s16000/banner-7.webp" width="720" height="720" layout="intrinsic" class="banner"></amp-img>
+      <amp-img src="https://ik.imagekit.io/nike88/nike88-pecah-selayar.jpg" width="720" height="720" layout="intrinsic" class="banner"></amp-img>
       <a href="https://jalurcuan.info/s/nike88link1" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
       <a href="https://jalurcuan.info/s/nike88link2" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">DAFTAR</a>
       <p class="copyright">© 2024 | Design By Nike88 | All Rights Reserved.</p>
