--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
         <h3>Nike88 : Login Resmi Akses Cepat ke Dunia Slot dan Casino Seru!</h3>
       </div>
       <amp-img src="https://ik.imagekit.io/nike88/rtp-nike88-slot-gacor.jpg" width="720" height="720" layout="intrinsic" class="banner"></amp-img>
-      <a href="https://jalurcuan.info/s/nike88link1" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
-      <a href="https://jalurcuan.info/s/nike88link2" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">DAFTAR</a>
+      <a href="https://nk88nusantara.xyz" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
+      <a href="https://nk88nusantara.xyz/register?ref=daftartop" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">DAFTAR</a>
       <p class="copyright">© 2024 | Design By Nike88 | All Rights Reserved.</p>
     </div>
   </body>
