--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Nike88 : Login Resmi Akses Cepat ke Dunia Slot dan Casino Seru!</title>
     <meta name="description" content="Nikmati pengalaman bermain terbaik di Nike88, situs resmi dengan akses cepat ke game slot dan casino seru. Login sekarang dan raih jackpot besar setiap hari!" />
     <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh5bnKAXJ6spPK3i_vLyujYYppJH3NhHiciIMBYV02IzQMpx0_X-Q6-qoK_Mp-0gbD0MNaSpSKSrNE_kWMR8deI0s45239Jta2_iGHFwkQXUf5PoRzWG_jH0ViKU7Ln3j3dW2YqkEu9FpQQ2xxiTmgBpC39CzHUI0o-u4SLxiIT191vAhoDazKelUdpBxfA/s320/site_logo_favicon-1687935169.png" rel="icon" type="image/x-icon" />
-    <link rel="canonical" href="https://nike88.it.com" />
-    <link rel="alternate" href="https://nike88.it.com" hreflang="id" />
-    <meta property="og:url" content="https://nike88.it.com" />
+    <link rel="canonical" href="https://nike88banten.com" />
+    <link rel="alternate" href="https://nike88banten.com" hreflang="id" />
+    <meta property="og:url" content="https://nike88banten.com" />
     <meta property="og:site_name" content="Nike88" />
     <meta property="og:image:alt" content="Nike88 : Login Resmi Akses Cepat ke Dunia Slot dan Casino Seru!" />
     <meta property="og:image" content="https://ik.imagekit.io/nike88/rtp-nike88-slot-gacor.jpg" />
