--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
 <!DOCTYPE html>
 <html amp lang='id'>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nike88 : Link Mahjong Gacor Terbaru dengan Pola Paling Stabil Hari Ini</title>
-    <meta name="description" content="Nikmati link Mahjong gacor terbaru di Nike88 dengan pola paling stabil hari ini. Spin lebih ringan, scatter lebih sering muncul, dan peluang maxwin makin terbuka lebar." />
+    <title>Nike88 Official Site: Pengalaman Main Stabil & Anti Ribet</title>
+    <meta name="description" content="Nike88 Official Site hadir dengan pengalaman main stabil, anti ribet, akses cepat, sistem aman, layanan responsif untuk pengguna yang ingin main nyaman setiap hari tanpa kendala dan terpercaya." />
     <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh5bnKAXJ6spPK3i_vLyujYYppJH3NhHiciIMBYV02IzQMpx0_X-Q6-qoK_Mp-0gbD0MNaSpSKSrNE_kWMR8deI0s45239Jta2_iGHFwkQXUf5PoRzWG_jH0ViKU7Ln3j3dW2YqkEu9FpQQ2xxiTmgBpC39CzHUI0o-u4SLxiIT191vAhoDazKelUdpBxfA/s320/site_logo_favicon-1687935169.png" rel="icon" type="image/x-icon" />
-    <link rel="canonical" href="https://nike88kediri.com" />
-    <link rel="alternate" href="https://nike88kediri.com" hreflang="id" />
-    <meta property="og:url" content="https://nike88kediri.com" />
+    <link rel="canonical" href="https://nike88.it.com" />
+    <link rel="alternate" href="https://nike88.it.com" hreflang="id" />
+    <meta property="og:url" content="https://nike88.it.com" />
     <meta property="og:site_name" content="Nike88" />
-    <meta property="og:image:alt" content="Nike88 : Link Mahjong Gacor Terbaru dengan Pola Paling Stabil Hari Ini" />
+    <meta property="og:image:alt" content="Nike88 Official Site: Pengalaman Main Stabil & Anti Ribet" />
     <meta property="og:image" content="https://ik.imagekit.io/nike88/rtp-nike88-slot-gacor.jpg" />
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -241,7 +240,7 @@
         </center>
       </header>
       <div class="welcome">
-        <h3>Nike88 : Link Mahjong Gacor Terbaru dengan Pola Paling Stabil Hari Ini</h3>
+        <h3>Nike88 Official Site: Pengalaman Main Stabil & Anti Ribet</h3>
       </div>
       <amp-img src="https://ik.imagekit.io/nike88/rtp-nike88-slot-gacor.jpg" width="720" height="720" layout="intrinsic" class="banner"></amp-img>
       <a href="https://jalurcuan.info/s/nike88link1" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">LOGIN</a>
